--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,25 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  delayed_widget: ^1.1.2
+  flutter_bloc: ^8.0.1
+  bloc: ^8.0.3
+  connectivity_plus: ^3.0.2
+  loading_animation_widget: ^1.2.0+3
+  shimmer: ^2.0.0
+  smooth_page_indicator: ^0.3.0-nullsafety.0
+  get_it: ^7.2.0
+  dio: ^4.0.6
+  shared_preferences: ^2.0.15
+  flutter_svg: ^1.1.5
+  font_awesome_flutter: ^10.2.1
+  badges: ^2.0.3
+  cached_network_image: ^3.2.2
+  location: ^4.4.0
+  flutter_typeahead: ^3.2.0
+  flutter_rating_bar: ^4.0.1
+  android_sms_retriever: ^1.3.2
+  persian_number_utility: ^1.1.4
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +42,11 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+  fonts:
+    - family: Vazir
+      fonts:
+        - asset: assets/fonts/vazir.ttf
