--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_localizations: # Add this line
+    sdk: flutter
+
   flutter_lints: ^2.0.0
 
 flutter:
