--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   location: ^5.0.3
   flutter_typeahead: ^5.2.0
   flutter_rating_bar: ^4.0.1
-#  android_sms_retriever: ^1.3.2
+  android_sms_retriever: ^1.3.2
   persian_number_utility: ^1.1.4
 
 dev_dependencies:
